--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -123,3 +123,41 @@
 	url = {https://www.theyeshivaworld.com/news/general/1986308/ywn-exclusive-real-winners-losers-of-the-recent-nyc-elections.html},
 	langid = {canadian}
 }
+
+@article{lange2025,
+	title = {Interview with Michael Lange},
+	author = {Lange, Michael},
+	year = {2025},
+	month = {02},
+	date = {2025-02-12}
+}
+
+@misc{broszkowski2021,
+	title = {Michael Hollingsworth Wants Housing for Everyone},
+	author = {Broszkowski, Roman},
+	year = {2021},
+	month = {06},
+	date = {2021-06-19},
+	url = {https://indypendent.org/2021/06/michael-hollingsworth-wants-housing-for-everyone/},
+	langid = {canadian}
+}
+
+@misc{coliveeditorial2021,
+	title = {Election Day: Crown Heights Heads to the Polls},
+	author = {COLive Editorial, COLlive},
+	year = {2021},
+	month = {06},
+	date = {2021-06-22},
+	url = {https://collive.com/election-day-crown-heights-heads-to-the-polls/},
+	langid = {canadian}
+}
+
+@misc{coliveeditorial2021a,
+	title = {Crystal Hudson Thanks Chasidic Supporters},
+	author = {COLive Editorial, COLlive},
+	year = {2021},
+	month = {06},
+	date = {2021-06-23},
+	url = {https://collive.com/crystal-hudson-thanks-chasidic-supporters/},
+	langid = {canadian}
+}
