--- a/notebooks/district_35.qmd
+++ b/notebooks/district_35.qmd
@@ -95,7 +95,7 @@ plt.title("Education Level by ED")
 plt.show()
 ```
 
-As in Chapter 2, K-Means clustering was used to reduce the dimensionality of the demographic variables. The clusters represented in Figure 3 take into account income, education, race, and occupation type, broken into several categories. Table 1 below the map shows key demographic figures by cluster. In the section of the district running diagonally down Flatbush Avenue there are primarily three groups. In the middle section are Whites divided by income and levels of income and education, and in the northern hook of the district a Black population. In the horizontal section of the district to the east of the park there is a white lower income cluster that seems to be the Hasidic blocs, then there is a higher and lower and income Black cluster.
+As in Chapter 2, K-Means clustering was used to reduce the dimensionality of the demographic variables. The clusters represented in Figure 3 take into account income, education, race, and occupation type, broken into several categories. Table 1 below the map shows key demographic figures by cluster,  including the percentage employed in several occupations. In the section of the district running diagonally down Flatbush Avenue there are primarily three groups. In the middle section are clusters 2 and 3, Whites that have similar levels of higher education but are divided dramatically by income, and in the northern hook of the district cluster 4, a lower education and income and higher Black population. In the horizontal section of the district to the east of the park there is a white lower income cluster, 0, that is clearly the Hasidic blocs, then there clusters 1 and 4, 1 being more of a racially mixed middle income and education and 4 being the highest percentage Black cluster.
 
 ```{python}
 #| warning: false
@@ -119,7 +119,9 @@ plt.show()
 averages = clusters.groupby('cluster')[cols_to_keep].mean().reset_index()
 averages['top_three'] = averages[job_cols].apply(lambda row: row.nlargest(3).index.tolist(), axis=1)
 a_tbl = averages[['cluster','mhhi21','cvap21bapp','white_transplant_ratio','nhb21p','Retail Trade','Professional, Scientific, and Technical Services','Educational Services','Information']].round(2)
-print(a_tbl)
+a_tbl = a_tbl.rename(columns={'mhhi21':'MHI','cvap21bapp':'BA+','nhb21p':"NH Black",'Retail Trade':'Retail','Professional, Scientific, and Technical Services':'Science & Tech','Educational Services':'Education','Information':'Information'})
+a_tbl
+
 ```
 
 The district contains several groups that are of great interest to progressive coalition formation in the city, new arrival high and middle income whites, a large conservative religious bloc, and native and foreign born Blacks. Michael Lange suggested this district, similar to Guttierez's, is demographically prime for a DSA candidate [@lange2025].
