--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -161,3 +161,11 @@
 	url = {https://collive.com/crystal-hudson-thanks-chasidic-supporters/},
 	langid = {canadian}
 }
+
+@article{hendrickson2025,
+	title = {Interview with Zach Hendrickson - Coordinator of NYC-DSA City Socialists in Office Committee},
+	author = {Hendrickson, Zach},
+	year = {2025},
+	month = {03},
+	date = {2025-03-06}
+}
