--- a/notebooks/references.bib
+++ b/notebooks/references.bib
@@ -169,3 +169,11 @@
 	month = {03},
 	date = {2025-03-06}
 }
+
+@article{hendrickson2025a,
+	title = {Interview with Zach Hendrickson - Coordinator of NYC-DSA City Socialists in Office Committee},
+	author = {Hendrickson, Zach},
+	year = {2025},
+	month = {03},
+	date = {2025-03-06}
+}
