--- a/notebooks/district_35.qmd
+++ b/notebooks/district_35.qmd
@@ -83,11 +83,17 @@ to_remove = [ 'w2psp',
 wp_cols = [col for col in wp_cols if col not in to_remove]
 ```
 
-The 2021 Democratic primary in Brooklyn’s 35th City Council district offered an excellent view of a rivalry central to NYC progressive politics. Crystal Hudson, aid to the former city council woman Lauire Cuombo and endorsed by Brooklyn's lead antagonist to the DSA Hakeem Jeffries, squared off against Michael Hollingsworth, DSA-endorsed socialist running proudly as an anti-system political outsider. The two feuded over their insider/outsider status, disagreeing on the possibility of enacting meaningful political change without disrupting the political status quo. Despite this vocal disagreement, the two shared much ideological space, agreeing generally on defunding the NYPD, opposing rezoning in the 35th, and enacting a more redistributive city budget. The district that they ran in is one of the city's more diverse by several metrics as well as being indicative of many of the most important changes animating NYC demographics and politics. In the end Hudson won the district by successfully 1) winning over the district's large Hasidic population, 2) pulling away key blocs of DSA support in the more affluent western section of the district as well as by 3) out fundraising Hollingsworth in wealthier areas of Brooklyn, inside and outside the district. This contest between rival left factions foregrounded several important questions about the pragmatics of progressive coalition formation, including about the relationship between two very closely related ideological factions, the relative importance of endorsements and political networks, about dealing with large but minority conservative voting blocs, as well as of demographic support for the DSA, and of the importance of ideology relative to the importance of political brand. This chapter will examine the district, the candidates, the campaign, and then compare the results with two relevant State Assembly and Senate races. It will conclude by discussing what Hudson's coalition means for the formation of progressive coalitions in the city.
+The 2021 Democratic primary in Brooklyn’s 35th City Council district offered an excellent view of a rivalry central to NYC progressive politics. Crystal Hudson, aide to the former city council woman Laurie Cuombo and endorsed by U.S. Congressman Hakim Jeffries, Brooklyn’s lead antagonist to the DSA, squared off against Michael Hollingsworth, the DSA-endorsed socialist running proudly as an anti-system political outsider. The two feuded over their insider/outsider status, disagreeing on whether it was possible to enact meaningful political change without disrupting the political status quo. Despite this rhetorical disagreement, the two shared much ideological space, agreeing generally on defunding the NYPD, opposing rezoning in the 35th, and enacting a more redistributive city budget.
+
+They were running in a district that is more diverse than others by several metrics as well as being animated by the current changes in NYC demographics and politics. In the end, Hudson won the Democratic primary and general election by successfully 1) winning over the district’s large Hasidic population, 2) pulling key blocs of DSA support away from Hollingsworth in the more affluent western section of the district, and 3) raising more funds than Hollingsworth in wealthier areas of Brooklyn, inside and outside the district.
+
+This contest between left-leaning rivals foregrounded important questions about the pragmatics of progressive coalition formation, including how two very closely related ideological strands related to each other, the relative importance of different endorsements and political networks, how left candidates should deal with large but minority conservative voting blocs, the demographic limits of support for the DSA, and the relative importance of ideology relative to political brand. This chapter will examine the district, the candidates, the campaign, and then compare the results with two relevant State Assembly and Senate races. It will conclude by discussing what Hudson’s coalition means for the formation of progressive coalitions in the city.
 
 ## The District
 
-District 35 lies in Central Brooklyn, running down Flatbush Avenue through Prospect Heights and then east through Crown Heights with Empire Boulevard as its southern border. The district falls in the top quintile of NYC Council districts in rate of higher education and in the second highest quintile in both White and Black share of the population. Much of the Black population is of West Indian origin, it is in the top quintile of West Indian born residents. It is also in the top quintile of white transplants, measured as white population born outside of New York State, and many of its neighborhoods, especially those in the central and southern part of the district, have the reputation of being rapidly gentrifying. It has a sizable Hasidic population, the Chabad-Lubavitch, though this population is partially split by Empire Boulevard into the 40th Council District. It has low Asian and Hispanic populations, and is in the middle of the road in terms of income, though, as with education, this masks much diversity, with certain election districts (EDs) in the 35th among the poorest and least educated in the city. In the demographic clustering used in chapter two it was in cluster three, with districts such as Lincoln Restler's and Shahana Hanif's, that mix high-income, mainly white sections, with more racially diverse and mid- and lower-income sections. The district is heavily Democratic. The congressional district in which it sits, the 9th, is D+32 on the Cook Political Index. Joe Biden won the 35th by an 85% margin in the 2020 election (though there was significant Trump support in the Hasidic section of the neighborhood).
+District 35 occupies the northwestern edge of Black central Brookly adjacent to long-gentrified Park Slope. It is  just East of the historic but now-blurring dividing line between white and Black Brooklyn. Its western edge runs down Flatbush Avenue through Prospect Heights and then cuts east through Crown Heights along Empire Boulevard as its southern border. The Brownstone district falls in the top quintile of NYC Council districts in rate of higher education and in the second highest quintile in both White and Black share of the population. Much of the Black population is of West Indian origin, it is in the top quintile of West Indian born residents. It is also in the top quintile of white transplants, measured as white population born outside of New York State, and many of its neighborhoods, especially those in the central and southern part of the district, have the reputation of being rapidly gentrifying. It also has a sizable Hasidic population, the Chabad-Lubavitch, though this population is partially split by Empire Boulevard into the 40th Council District. It relatively few Asian and Hispanic residents and is in the middle in terms of income, though, as with education, this masks much diversity, and the election districts (EDs) containing public housing in the northern part of the 35th are among the poorest and least educated in the city.
+
+The district belonged to cluster three in the demographic classification developed in chapter two, along with districts such as Lincoln Restler’s and Shahana Hanif’s, that mix high-income, mainly white sections with more racially diverse and mid- and lower-income sections. The district is heavily Democratic. It sits in the 9^th^ congressional district, which is D+32 on the Cook Political Index. Joe Biden won the 35th by an 85% margin in the 2020 election (though there was significant Trump support in the Hasidic section of the neighborhood).
 
 Figure 1 below is a map of education level by ED across the district. Of note are the generally higher levels of education north of Grand Army Plaza in the Prospect Heights area, with the exception of the top hook of the district which includes a NYCHA campus. Income is similarly much higher in this section of the neighborhood. Figure 2 shows the distribution of white transplants in the district. There are, again, high rates in the blocks north of Grand Army Plaza, extending east across Franklin Avenue and south to around Eastern Parkway.
 
@@ -151,15 +157,15 @@ The district contains several groups that are of great interest to progressive c
 
 ## The Candidates
 
-The two front runners (by a great margin) in the 2021 Council race were Crystal Hudson and Michael Hollingsworth. Hudson had previously worked for the outgoing member Laurie Cuombo, and therefore had connections to the county Democratic establishment, whereas Hollingsworth, a graphic designer and organizer, proudly ran on his lack of such connections. Hollingsworth received a DSA endorsement, an organization which outgoing member Cuombo referred to as the political arm of white gentrification. Despite these differences, in analyzing their interviews, tweets, and campaign material, it is difficult to find significant daylight between the two on firm policy issues. Much media commentary noted two seemingly contradictory aspects of the race, that 1) it set up a contest between two rival sections of the city’s progressive left, but that 2) the two candidates seemed to agree on most substantive policy issues[@salazar2021; @hamm2021; @barkan2021; @hollidaysmith2021]. Both agreed that portions of the NYPD’s budget should be reallocated to other uses (though at different speeds and in different amounts), both thought the city’s land-use process needed to be retooled to build more affordable housing, especially to encourage more rezoning in wealthy neighborhoods, both were pro-union and pro-education reform (though they differed slightly on mayoral control of schools). One commentator suggested that the most daylight between the candidates was on real estate, with Hollingsworth suggesting a complete moratorium on upzonings, while Hudson argued that upzonings should continue, but in wealthier neighborhoods and with more affordable housing. Case in point, she supported the SoHo/NoHo rezoning while Hollingsworth did not. Similarly, Hollingsworth has suggested he would continue to support the practice of local member deference, while Hudson would not [@oder2021].
+The two front runners (by a great margin) in the 2021 Council race were Crystal Hudson and Michael Hollingsworth. Hudson had worked for the outgoing Council member Laurie Cuombo and therefore had connections to the county Democratic establishment, whereas Hollingsworth, a graphic designer and community organizer, proudly ran on his lack of such connections. Hollingsworth was endorsed by DSA, an organization to which outgoing member Cuombo referred as the political arm of white gentrification. Despite these differences, in analyzing their interviews, tweets, and campaign material, it is difficult to find significant daylight between the two on firm policy issues. Much media commentary noted two seemingly contradictory aspects of the race, that 1) it set up a contest between two rival sections of the city’s progressive left, but that 2) the two candidates seemed to agree on most substantive policy issues [@salazar2021; @hamm2021; @barkan2021; @hollidaysmith2021]. Both agreed that portions of the NYPD’s budget should be reallocated to other uses (though at different speeds and in different amounts), both thought the city’s land-use process needed to be retooled to build more affordable housing, especially to encourage more rezoning in wealthy neighborhoods, both were pro-union and pro-education reform (though they differed slightly on mayoral control of schools). One commentator suggested that the most daylight between the candidates was on real estate, with Hollingsworth suggesting a complete moratorium on upzonings, while Hudson argued that upzonings should continue, but in wealthier neighborhoods and with more affordable housing. Case in point, she supported the SoHo/NoHo rezoning while Hollingsworth did not. Similarly, Hollingsworth has suggested he would continue to support the practice of local member deference, while Hudson would not [@oder2021].
 
 Though this gap on real estate and development is not enormous, it may explain, in part, some of the trade union PAC support for Hudson as well as the Stephen Ross mailers mentioned below. It also helps shed light on the central political differences between the two. While both, as mentioned above, support the most common slate of reforms on development, Hollingsworth made it clear he thought that Hudson's proximity to the borough's Democratic establishment was part of the problem. He saw her campaigning on affordable housing as a convenient rhetorical shift to the left. He contrasted his own history of tenant organization "for years I’ve been a volunteer and tenant organizer with the Crown Heights Tenant Union (CHTU), organizing my neighbors and building tenant power across Crown Heights to fight back against our own displacement" against "candidates who have been part of the structures that have harmed our community, now being recast as fighters against the system." He's "tired" he wrote, "of being presented every election cycle with establishment candidates and being told that this is the best person for the job"[@hollingsworth2021]. While he doesn't name Hudson directly here, he goes to say that this is exactly why he is most qualified to represent the district, making it clear which establishment candidate he had in mind. In another interview, asked again why he was the right candidate for the job, he described himself as a "candidate who’s not going to be in the mold of what we had before and connected to the same harmful forces—whether it’s real estate or political—that have done so much damage to our community"[@barkan2021]. In another interview he emphasized that he was the only candidate with actual experience fighting for affordable housing, "while today everyone says things like housing is a human right, there’s one person who’s shown some commitment to making that happen, to make that a right for everybody. I think that separates me from the other folks \[in the race\]"[@broszkowski2021]. For Hollingsworth policy can't be instrumentally separated from political background; Hudson was a product of the political system that created displacement in the district and her election would necessarily mean more of it. This attitude reflects what Zach Hendrickson, coordinator of the DSA's Socialists in Office committee, had to say about socialist strategy in the city. While he didn't comment on this race directly, he spoke about the importance of building DSA power away from the current institutional structures of city government. There is a sort of gravity of institutional alignment in this view that, no matter the tenor of the rhetoric, pulls electeds into the same legislative patterns as their predocessors. This does not mean that insider/outsider coalitional work is impossible or even undesireable, Hendrickson talked repeatedly about working with colleagues on the progressive caucus, but it does mean there is something categorically different about outsider candidates that make them prefereable to socialists. He also noted that the primary metric he uses to evaluate potential DSA success is the share of renters in a district, which helps to make sense of Hollingsworth's reliance on tenants as the core organizational category of his campaign [@hendrickson2025].
 
 Hudson, responding to this manner of critique, made it clear she was proud to have political experience. “Trump had no experience, right?" she said "And look what that got us for four years”[@barkan2021]. In the same interview she went on to expand on her pride in receiving a wide range of endorsements, including those who were to her right, stating that everyone was welcome at her table. She went on to take a clear shot at the DSA's notoriously ideologically selective endorsement process "I’m running to represent everyone, not some people or only people who agree with me 100 percent of time on 100 percent of the issues”[@barkan2021]. For Hudson, political experience and well placed connections were not only nothing to be ashamed of, they were the very instrument by which she would spur change. Additionally, actual political work required some ideological leniency, which the DSA has seemed incapable of. This political squabbling belies a real difference on the nature of politics and political opposition. Hollingsworth saw the goal of his campaign as leading an opposition movement to a political class that, no matter the rhetoric du jour, had been responsible for inequality and displacement. He saw a broad coalition of the displaced and affected as his base, with their status as tenants as the unifying demographic category. He talked of a "broad coalition that stands for Black and brown, marginalized, and working class New Yorkers to fight austerity and pass a bold legislative agenda"[@hollingsworth2021]. Hudson, also heavy on language of justice and anti-austerity, saw a route to do that through more traditional political means. She also framed this language of opposition in purely racial terms, eschewing the language of class and tenancy evoked by Hollingsworth. "Race," she wrote, "is the prism through which I view injustice ... In short, when Black New Yorkers fare well, all of us fare well"[@hudson2021].
 
-While their ideological difference may be, in the grand scheme of city politics, seemingly minor, they were large enough to attract attention from conservative political interests in the city. Common Sense NYC, a real-estate PAC, spent hundreds of thousands of dollars in opposition to several left-wing candidates, Hollingsworth among them, calling them "too dangerous for the City Council". Their opposition was nominally about crime and police funding, but with the backing of several big real estate players such as Stephen Ross, it can reasonably be assumed that candidates' stance on land use and development influenced their spending choices. That Hudson and Hollingsworth had practically identical statements on NYPD funding seems to speak to this motivation. This reading of the PAC spending was given voice by Sean Abreu, also targeted, "they’re scared that a City Council that’s full of socialists ... will be a threat to their top dollar because we are very committed in guaranteeing a city that works for immigrant and working-class communities"[@maldonado2021]. That the real estate industry deemed one of the candidates to be a threat and not the other evinces some real separation behind the similar political rhetoric. This sentiment was also reflected in Hendrickson's interview. He saw this kind of anti-DSA campaigning as a mark of its success. His telling of the DSA strategy is a long one, building a center of political power outside the bounds of current political power. That organizations such as Common Sense see the party as a threat is a sign of their progress, as well as a sign that the insider/outsider division is a real one, even if harder to measure than policy difference [@hendrickson2025a].
+While their ideological difference may be, in the grand scheme of city politics, seemingly minor, they were large enough to attract attention from conservative political interests in the city. Common Sense NYC, a real-estate PAC, spent hundreds of thousands of dollars in opposition to several left-wing candidates, Hollingsworth among them, calling them “too dangerous for the City Council”. Their opposition was nominally about crime and police funding, but since it was backed by several big real estate players such as Stephen Ross, it can reasonably be assumed that candidates’ stance on land use and development influenced their spending choices. That Hudson and Hollingsworth had practically identical statements on NYPD funding seems to speak to this motivation. This reading of the PAC spending was given voice by Sean Abreu, also targeted, “they’re scared that a City Council that’s full of socialists … will be a threat to their top dollar because we are very committed in guaranteeing a city that works for immigrant and working-class communities”[@maldonado2021]. That the real estate industry deemed one of the candidates to be a threat and not the other evinces some real separation behind the similar political rhetoric. This sentiment was also reflected in Hendrickson’s interview. He saw this kind of anti-DSA campaigning as a mark of its success. His telling of the DSA strategy is a long one, building a center of political power outside the bounds of current political power. That organizations such as Common Sense see the party as a threat is a sign of their progress, as well as a sign that the insider/outsider division is a real one, even if harder to measure than policy difference [@hendrickson2025a].
 
-The primary in the 35th offered two candidates who seemingly agreed on major political issues but had vastly different political networks and ideas of political action. One a traditional Brooklyn progressive, perhaps moved rhetorically to the left to capture the spirit of the time, running with the support of an established network of Democratic insiders. The other a populist outsider seeking to ride a multi-racial working class coalition of tenants to victory. The race helps illuminate some particularly interesting dynamic in NYC progressive politics. Do the differences between the candidates register to voters? How much of a chance does an outsider, even with a relatively powerful DSA endorsement, stand against an established insider? What demographic blocs do these messages appeal to? Does Laurie Cuombo's assessment that the DSA is the political wing of white gentrification hold out in the 35th? At the root of these questions are larger ones about political branding as well as about how national politics map onto local politics. The next section will explore the campaign, specifically it funding, in more depth, and then turn to election returns.
+The primary in the 35th offered two candidates who seemingly agreed on major political issues but had vastly different political networks and ideas about political action. One is a traditional Brooklyn progressive, perhaps moved rhetorically to the left to capture the spirit of the time, running with the support of an established network of Democratic insiders. The other is a populist outsider seeking to ride a multi-racial working class coalition of tenants to victory. The race helps illuminate some particularly interesting dynamic in NYC progressive politics. Do voters understand the differences between the candidates? How much of a chance does an outsider, even with a relatively powerful DSA endorsement, stand against an established insider? What demographic blocs do these messages appeal to? Is there evidence that Laurie Cuombo’s assessment that the DSA is the political wing of white gentrification holds true for the 35th? At the root of these questions are larger ones about political branding as well as about how national politics map onto local politics. The next section will explore the campaign, specifically it funding, in more depth, and then turn to election returns.
 
 ## The Campaign
 
@@ -267,7 +273,7 @@ map.plot(column='ch_vote_share', cmap='viridis', legend=True, figsize=(15, 10))
 plt.show()
 ```
 
-Geographically, Hudson's vote looks to correlate to the Hasidic EDs and to wealthier EDs along Flatbush. Table 3 below shows all correlations stronger than .25 between Hudson's vote share and key demographic variables. The NHW correlation is over .5, though this is probably largely atrributable to the Hasidic vote. The Black correlation is negative. An equally strong correlation is with non-profit workers, and a weaker one with social service workers and therapists. This leaves the question of Hudson's coalition a bit ambiguous, except that she seems to clearly have won the Hasidic blocs, and done well with non-profit workers and social service providers. The next section will take up other elections that crossed into the 35th council district to get a closer picture of how the EDs broke.
+Geographically, Hudson’s vote looks to correlate to the Hasidic EDs and to wealthier EDs along Flatbush. Table 3 below shows all correlations stronger than .25 between Hudson’s vote share and key demographic variables. The NHW correlation is over .5, though this is probably largely attributable to the Hasidic vote. The Black correlation is negative. An equally strong correlation is with non-profit workers, and a weaker one with social service workers and therapists. This leaves the question of Hudson’s coalition a bit ambiguous, except that she seems to clearly have won the Hasidic blocs, and done well with non-profit workers and social service providers. The next section will take up other elections that crossed into the 35th council district to get a closer picture of how the EDs broke.
 
 ```{python}
 #| warning: false
@@ -379,11 +385,17 @@ md_table = tabulate(b_tbl, tablefmt="pipe",showindex=False,headers=cols)
 display(Markdown(md_table))
 ```
 
-This demographic breakdown offers a fascinating look at DSA support. The difference in all variables shown above is significant at the 99.9% confidence interval, meaning the chance that the demographic variation between these groups is random is practically 0. Categories 1 and 2, which vote for the DSA some or all of the time are whiter, better educated, higher income, and more likely to be artists, journalists, or designers than category zero. As discussed in Chapter 2 this last occupation category is a key indicator for DSA sucess. This aligns with stereotypes about the DSA citywide, as well as Hendrickson's estimation that the organization could be doing better with working-class voters of color. In this election, however, Hudson was able to break up the DSA coalition and take the whitest, highest educated, and wealthiest EDs into her coalition. While both categories are likely to be artists, designers, and journalists, the category that broke with Hollingsworth is significantly less likely to be office clerks or admin. The core of the DSA electoral coalition, from this sample, seems be highly educated but middle income whites living along Franklin Ave, working in white-collar positions but not top earning ones. The wealthier whites in Prospect Heights may be happy to accept a DSA candidate in races such as Brisport's and Souffrant's, which is to say there may be no particular DSA stigma there, but are also eager to jump to a more traditional progressive candidate when one comes along. Especially one endorsed by local and national Democratic leadership. Hudson managed to artfully thread this coalition of Hasidic voters worried about Isreal and high-income voters looking for a traditional progressive and win. This is a real challenge to the DSA outsider strategy mentioned above.
+This demographic breakdown offers a fascinating look at DSA support. The difference in all variables shown above is significant at the 99.9% confidence interval, meaning the chance that the demographic variation between these groups is random is practically 0. Categories 1 and 2, which vote for the DSA some or all of the time are whiter, better educated, higher income, and more likely to be artists, journalists, or designers than category zero. As discussed in Chapter 2 this last occupation category is a key indicator for DSA sucess. This aligns with stereotypes about the DSA citywide, as well as Hendrickson’s estimation that the organization could be doing better with working-class voters of color. In this election, however, Hudson was able to break up the DSA coalition and take the whitest, highest educated, and wealthiest EDs into her coalition. While both categories are likely to be artists, designers, and journalists, the category that broke with Hollingsworth is significantly less likely to be office clerks or admin. The core of the DSA electoral coalition, from this sample, seems be highly educated but middle income whites living along Franklin Ave, working in white-collar positions but not top earning ones. The wealthier whites in Prospect Heights may be happy to accept a DSA candidate in races such as Brisport’s and Souffrant’s, which is to say there may be no particular DSA stigma there, but are also eager to jump to a more traditional progressive candidate when one comes along. Especially one endorsed by local and national Democratic leadership. Hudson managed to artfully thread this coalition of Hasidic voters worried about Isreal and high-income voters looking for a traditional progressive and win. This is a real challenge to the DSA outsider strategy mentioned above.
 
 ## Conclusion
 
-The 35th council district is a diverse district, representing many of the biggest changes to NYC demographics and politics. It features large white and Black populations, with many in-group differences in those larger racial categories. It features newcomers and long-time residents, and it has a large spectrum of income and education. Crystal Hudson's winning coalition managed to win completely the large Hasidic bloc in the southeast of the district, as well as pick several high-income, highly educated whites off of the DSA coalition in the area just north of Grand Army Plaza. This has important implications for the process of coaltion formation. First, it offers some evidence for differential demographic support for certain types of progressives. In this case, the idea of white newcomer support for the DSA seems to be true. High-income liberal whites might be counted on to join a progressive coalition, but with a preference for more tradition, party endorsed Democrats, whereas highly educated middle-income whites may be the ideal demographic pocket for further left progressives. Second, it is a reminder of the importance of conservative blocs. If the Hasidic self-reported numbers are close to correct, Holllingsworth could have kept the entire Brisport and Suffrant coalition intact and still lost the race, almost entirely because of his stance on Israel (which, to clearly state the obvious, the New York City Council has no control over). Even a reduction in fervor over his stances on this issue might have reduced turnout and put him closer to the council. This offers a difficult picture for the DSA's twin stances of ideoligcal purity and outsider campaign status. Finally, it begs questions surrounding how these previous matters affect actual policy. How much does it matter to the production of progressive policy that the insider with more wealthy support won? To those in the DSA section of the coalition it matters quite a lot, and they continue to see their job in city politics as slowly building a power structure to rival the current Democratic establishment. Nothing will fundamentally change for working-class New Yorkers, in this view, until the gravitational pull of business as usual is broken. As evidence for this view they would cite Hudson's affirmative vote on the most recent budget vote, lending consent to Mayor Adam's budget cuts. From a more traditional progressive perspective, however, Hudson has been a reliable supporter on the post-split progressive caucus and her yes vote on the budget, along with the vast majority of her colleagues, made no actual difference to its passage. One way to state the difference between these two camps might be in political time. The DSA sees its mission in many election cycles, building a new base of political power. The opposing perspective is more concerned with political production in the shorter term. This fault line will continue to be explored in subsequent chapters.
+The 35th council district is a diverse district, representing many of the biggest changes to NYC demographics and politics. It features large white and Black populations, with many in-group differences in those larger racial categories. It features newcomers and long-time residents, and it has a large spectrum of income and education. Crystal Hudson’s winning coalition managed to win completely the large Hasidic bloc in the southeast of the district, as well as pick several high-income, highly educated white neighborhoods off of the DSA coalition in the area just north of Grand Army Plaza. 
+
+This has important implications for the process of coaltion formation. First, it offers some evidence for differential demographic support for certain types of progressives. In this case, DSA support did in fact seem to come from white newcomers. High-income liberal whites might be counted on to join a progressive coalition, but with a preference for more traditional, party endorsed Democrats, whereas highly educated middle-income whites may be the ideal demographic pocket for further left progressives. 
+Second, the election reminds us that conservative blocs are important. If the Hasidic self-reported numbers are close to correct, Holllingsworth could have kept the entire Brisport and Suffrant coalition intact and still lost the race, almost entirely because of his stance on Israel (which, to state the obvious, does not fall within the jurisdiction of the New York City Council). Even a reduction in fervor over his stances on this issue might have reduced turnout and put him closer to the council. This offers a difficult picture for the DSA’s twin stances of ideological purity and outsider campaign status. 
+
+Finally, how do the issues at play in this election affect actual policies? How much does the difference between the two leading candidates and the victory of the one receiving more support from affluent whites matter to the production of progressive policy? It matters quite a lot to those in the DSA section of the coalition, and they continue to see their job in city politics as slowly building a power structure to rival the current Democratic establishment. They think that nothing will fundamentally change for working-class New Yorkers until they break the gravitational pull of business as usual. As evidence for this view they would cite Hudson’s affirmative vote on the most recent budget vote, lending consent to Mayor Adam’s budget cuts. From a more traditional progressive perspective, however, Hudson has been a reliable supporter on the post-split progressive caucus and her yes vote on the budget, echoing that of the vast majority of her colleagues, made no difference to its passage. One way to state the difference between these two camps might be how they view political time. The DSA sees its mission in many election cycles, building a new base of political power. The opposing perspective is more concerned with political production in the shorter term. Subsequent chapters will continue to explore this fault line.
+
 
 \clearpage
 
